--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -13,7 +13,7 @@
 </div>
 <div class="recipe-display right-div">
     <div class="card-body">
-        <h1 class="card-title">{{ recipe.title }}</h1>
+        <h1 class="card-title recipe-title">{{ recipe.title }}</h1>
         <h3 class="card-text">By {{ recipe.author }}</h3>
         <span lass="card-text">
             <div>
